# temperature-sensor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/TemperatureSensor/: CMakeLists.txt  HttpClient.hpp  HttpClientImpl.cpp  HttpClientImpl.hpp  TemperatureDataStore.cpp  TemperatureDataStore.hpp  TemperatureMeasurement.hpp  TemperatureSensor.cpp  TemperatureSensor.hpp  TemperatureSensor.test.cpp  application.cpp  application.hpp  common.hpp  conversion.hpp  conversion.test.cpp
test/: CMakeLists.txt  mock_waitable_timer.hpp  mock_waitable_timer.test.cpp
